external-crates/move/crates/move-prover/tests/snapshots/ints.fail.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/sources/ints.fail.move:16:3
   │
16 │   ensures(res_int != x_int.add(1u64.to_int()));
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/ints.fail.move:11: foo_spec
   =         x = 2437u64
   =     at tests/../../../../../crates/sui-framework/packages/move-stdlib/sources/u64.move:90
   =         x = 2437u64
   =     at tests/sources/ints.fail.move:7: foo
   =         result = 2438u64
   =     at tests/sources/ints.fail.move:8: foo
   =         res#1#0 = 2438u64
   =     at tests/sources/ints.fail.move:14: foo_spec
   =         x_int#1#0 = 2437
   =     at tests/sources/ints.fail.move:15: foo_spec
